--- a/api/package.json
+++ b/api/package.json
@@ -17,18 +17,20 @@
     "initialize_db": "knex seed:run && knex migrate:up"
   },
   "dependencies": {
-    "@keystonejs/adapter-knex": "^9.0.1",
-    "@keystonejs/app-admin-ui": "^5.9.5",
-    "@keystonejs/app-graphql": "^5.1.5",
-    "@keystonejs/auth-password": "^5.1.5",
-    "@keystonejs/fields": "^6.3.2",
-    "@keystonejs/fields-authed-relationship": "^1.0.2",
-    "@keystonejs/fields-datetime-utc": "^5.1.6",
-    "@keystonejs/fields-markdown": "^5.1.6",
-    "@keystonejs/fields-wysiwyg-tinymce": "^5.2.3",
+    "@keystonejs/adapter-knex": "^10.0.0",
+    "@keystonejs/app-admin-ui": "^6.0.0",
+    "@keystonejs/app-graphql": "^5.1.7",
+    "@keystonejs/auth-password": "^5.1.7",
+    "@keystonejs/fields": "^10.0.0",
+    "@keystonejs/fields-authed-relationship": "^1.0.4",
+    "@keystonejs/fields-auto-increment": "^5.1.7",
+    "@keystonejs/fields-datetime-utc": "^5.1.7",
+    "@keystonejs/fields-markdown": "^5.1.10",
+    "@keystonejs/fields-wysiwyg-tinymce": "^5.2.7",
     "@keystonejs/file-adapters": "^6.0.1",
-    "@keystonejs/keystone": "^8.1.0",
-    "@keystonejs/list-plugins": "^5.1.4",
+    "@keystonejs/keystone": "^9.0.0",
+    "@keystonejs/list-plugins": "^5.2.1",
+    "@keystonejs/test-utils": "^6.1.2",
     "@sendgrid/mail": "^6.5.5",
     "connect-pg-simple": "^6.1.0",
     "cross-env": "^7.0.0",
