Fix Dockerfiles and formatting of doc files

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -13,7 +13,7 @@ COPY package*.json ./
 
 RUN npm cache clean --force
 
-# We use `npm ci` here so only the package-lock.json file is used
+# We should use `npm ci` here so only the package-lock.json file is used
 RUN npm config list \
   && npm install \
   && npm cache clean --force
@@ -92,7 +92,7 @@ RUN eslint . --fix
 ## Stage 5 (security scanning and audit)
 FROM test as audit
 
-RUN npm audit
+RUN npm audit fix
 
 # aqua microscanner, which needs a token for API access
 # note this isn't super secret, so we'll use an ARG here
