--- a/web/package.json
+++ b/web/package.json
@@ -16,11 +16,11 @@
     "@apollo/react-hooks": "^3.1.3",
     "@artsy/fresnel": "^1.0.13",
     "@date-io/date-fns": "^1.3.11",
-    "@material-ui/core": "^4.7.0",
-    "@material-ui/icons": "^4.5.1",
-    "@material-ui/lab": "^4.0.0-alpha.39",
+    "@material-ui/core": "^4.9.14",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.53",
     "@material-ui/pickers": "^3.2.10",
-    "@material-ui/styles": "^4.6.0",
+    "@material-ui/styles": "^4.9.14",
     "@zeit/next-sass": "^1.0.1",
     "apollo-boost": "^0.4.4",
     "apollo-cache-inmemory": "^1.6.3",
@@ -34,45 +34,45 @@
     "babel-plugin-inline-react-svg": "^1.1.0",
     "casual": "^1.6.2",
     "classnames": "^2.2.6",
-    "date-fns": "^2.8.1",
+    "date-fns": "^2.13.0",
     "dotenv": "^8.2.0",
     "downshift": "^3.4.3",
     "faker": "^4.1.0",
-    "graphql": "^14.5.8",
+    "graphql": "^15.0.0",
     "graphql-tag": "^2.10.1",
-    "intersection-observer": "^0.7.0",
+    "intersection-observer": "^0.10.0",
     "isomorphic-unfetch": "^3.0.0",
     "lodash.debounce": "^4.0.8",
     "memoize-one": "^5.1.1",
-    "next": "^9.3.0",
-    "next-images": "^1.2.0",
-    "next-with-apollo": "^4.3.0",
-    "node-sass": "^4.13.1",
+    "next": "^9.4.0",
+    "next-images": "^1.4.0",
+    "next-with-apollo": "^5.0.1",
+    "node-sass": "^4.14.1",
     "nprogress": "^0.2.0",
-    "polished": "^3.4.2",
+    "polished": "^3.6.3",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
+    "react": "^16.13.1",
     "react-adopt": "^0.6.0",
-    "react-apollo": "^3.1.3",
-    "react-dom": "^16.12.0",
+    "react-apollo": "^3.1.5",
+    "react-dom": "^16.13.1",
     "react-flag-kit": "^0.3.1",
-    "react-flip-toolkit": "^7.0.7",
-    "react-icons": "^3.9.0",
+    "react-flip-toolkit": "^7.0.9",
+    "react-icons": "^3.10.0",
     "react-image-magnify": "^2.7.4",
     "react-input-mask": "^2.0.4",
-    "react-markdown": "^4.3.0",
-    "react-slick": "^0.25.2",
-    "react-spring": "^9.0.0-beta.34",
-    "react-use": "^13.13.0",
+    "react-markdown": "^4.3.1",
+    "react-slick": "^0.26.1",
+    "react-spring": "^8.0.27",
+    "react-use": "^14.2.0",
     "react-window": "^1.8.5",
     "resize-observer-polyfill": "^1.5.1",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^5.0.0",
+    "styled-components": "^5.1.0",
     "subscriptions-transport-ws": "^0.9.16",
-    "use-debounce": "^3.3.0",
-    "uuid": "^3.3.3",
-    "validator": "^12.2.0",
-    "webpack": "^4.41.0"
+    "use-debounce": "^3.4.2",
+    "uuid": "^8.0.0",
+    "validator": "^13.0.0",
+    "webpack": "^4.43.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
