Adds new eslint config and JSConfig aliases

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -72,13 +72,12 @@ COPY --from=dev /slatam/node_modules /slatam/node_modules
 
 # run linters as part of build
 # be sure they are installed with devDependencies
-RUN eslint . --fix
-
-# run unit tests as part of build
-# RUN npm test
+RUN eslint --fix -f tmp/eslintTableFormatter.js -o tmp/eslint_api_results.txt .
+# run unit tests as part of build1
+# RUN yarn run test
 
 # run integration testing with docker-compose later
-# CMD ["npm", "run", "int-test"] 
+# CMD ["yarn", "run", "int-test"] 
 
 ################################################
 
