--- a/web/.babelrc
+++ b/web/.babelrc
@@ -14,16 +14,16 @@
       {
         "root": ["./"],
         "alias": {
-          "@data": "./data",
-          "@constants": "./constants",
+          "@@data": "./data",
+          "@@constants": "./constants",
           "@components": "./src/components",
-          "@graphql": "./graphql",
-          "@lib": "./src/lib",
-          "@hooks": "./src/hooks",
-          "@pages": "./pages",
-          "@public": "./public",
-          "@root": "./",
-          "@views": "./src/views"
+          "@@graphql": "./graphql",
+          "@@lib": "./src/lib",
+          "@@hooks": "./src/hooks",
+          "@@pages": "./pages",
+          "@@public": "./public",
+          "@@root": "./",
+          "@@views": "./src/views"
         }
       }
     ]
