--- a/web/.eslintrc
+++ b/web/.eslintrc
@@ -59,16 +59,16 @@
     "import/resolver": {
       "babel-module": {
         "alias": {
-          "@data": "./data",
-          "@constants": "./constants",
+          "@@data": "./data",
+          "@@constants": "./constants",
           "@components": "./src/components",
-          "@graphql": "./graphql",
-          "@lib": "./src/lib",
-          "@hooks": "./src/hooks",
-          "@pages": "./pages",
-          "@public": "./public",
-          "@root": "./",
-          "@views": "./src/views"
+          "@@graphql": "./graphql",
+          "@@lib": "./src/lib",
+          "@@hooks": "./src/hooks",
+          "@@pages": "./pages",
+          "@@public": "./public",
+          "@@root": "./",
+          "@@views": "./src/views"
         }
       }
     }
