--- a/web/package.json
+++ b/web/package.json
@@ -92,6 +92,7 @@
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^2.3.0",
-    "prettier": "^1.18.2"
+    "prettier": "^1.18.2",
+    "table": "^5.4.6"
   }
 }
