--- a/web/.babelrc
+++ b/web/.babelrc
@@ -16,7 +16,7 @@
         "alias": {
           "@@data": "./data",
           "@@constants": "./constants",
-          "@components": "./src/components",
+          "@@components": "./src/components",
           "@@graphql": "./graphql",
           "@@lib": "./src/lib",
           "@@hooks": "./src/hooks",
