--- a/web/.eslintrc
+++ b/web/.eslintrc
@@ -61,7 +61,7 @@
         "alias": {
           "@@data": "./data",
           "@@constants": "./constants",
-          "@components": "./src/components",
+          "@@components": "./src/components",
           "@@graphql": "./graphql",
           "@@lib": "./src/lib",
           "@@hooks": "./src/hooks",
