--- a/.gitignore
+++ b/.gitignore
@@ -125,3 +125,5 @@ typings/
 # End of https://www.gitignore.io/api/macos,node,osx
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
+
+.next
