Fix styled components on production

--- a/.env
+++ b/.env
@@ -27,3 +27,6 @@ POSTGRES_PASSWORD=rBPQhGY9CKUz
 
 DATABASE_URL=postgres://dbadmin:rBPQhGY9CKUz@db/api
 
+API_COOKIE_SECRET=Hqd48dfDsIU4874
+
+########################################################################
