--- a/api/.eslintrc.json
+++ b/api/.eslintrc.json
@@ -4,12 +4,12 @@
     "commonjs": false,
     "es2020": true
   },
-  "extends": ["airbnb-base", "prettier", "plugin:node/recommended"],
+  "extends": ["airbnb-base", "prettier", "plugin:jest/recommended", "plugin:node/recommended"],
   "globals": {
     "Atomics": "readonly",
     "SharedArrayBuffer": "readonly"
   },
-  "plugins": ["prettier", "import", "node"],
+  "plugins": ["prettier", "import", "jest", "node"],
   "parserOptions": {
     "ecmaVersion": 2020
   },
@@ -17,6 +17,8 @@
     "node/file-extension-in-import": ["error", "always"],
     "import/newline-after-import": "error",
     "import/imports-first": ["error", "absolute-first"],
+    "node/no-missing-require": 0,
+    // "import/no-unresolved": 0,
     "consistent-return": 0,
     "no-param-reassign": 0,
     "arrow-parens": 2,
