--- a/api/package.json
+++ b/api/package.json
@@ -14,7 +14,9 @@
     "start": "cross-env NODE_ENV=production node server.js",
     "predev": "yarn run initialize_db",
     "prestart": "yarn run initialize_db",
-    "initialize_db": "knex seed:run && knex migrate:up"
+    "initialize_db": "knex seed:run && knex migrate:up",
+    "test": "cross-env NODE_ENV=test DISABLE_LOGGING=true jest --coverage",
+    "test:watch": "cross-env NODE_ENV=test DISABLE_LOGGING=true jest --watch --maxWorkers=1 --coverage"
   },
   "dependencies": {
     "@keystonejs/adapter-knex": "^10.0.0",
@@ -47,8 +49,10 @@
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jest": "^23.13.2",
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-prettier": "^3.1.2",
+    "jest": "^26.0.1",
     "nodemon": "^2.0.2",
     "prettier": "^1.19.1",
     "table": "^5.4.6"
