--- a/api/package.json
+++ b/api/package.json
@@ -40,7 +40,8 @@
     "graphql": "^14.6.0",
     "http-terminator": "^2.0.2",
     "react": "^16.13.1",
-    "striptags": "^3.1.1"
+    "striptags": "^3.1.1",
+    "validator": "^13.1.1"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
