--- a/api/package.json
+++ b/api/package.json
@@ -19,31 +19,31 @@
     "test:watch": "cross-env NODE_ENV=test DISABLE_LOGGING=true jest --watch --maxWorkers=1 --coverage"
   },
   "dependencies": {
-    "@keystonejs/adapter-knex": "^10.0.0",
-    "@keystonejs/app-admin-ui": "^6.0.0",
-    "@keystonejs/app-graphql": "^5.1.7",
-    "@keystonejs/auth-password": "^5.1.7",
-    "@keystonejs/fields": "^10.0.0",
-    "@keystonejs/fields-authed-relationship": "^1.0.4",
-    "@keystonejs/fields-auto-increment": "^5.1.7",
-    "@keystonejs/fields-datetime-utc": "^5.1.7",
-    "@keystonejs/fields-markdown": "^5.1.10",
-    "@keystonejs/fields-wysiwyg-tinymce": "^5.2.7",
-    "@keystonejs/file-adapters": "^6.0.1",
-    "@keystonejs/keystone": "^9.0.0",
-    "@keystonejs/list-plugins": "^5.2.1",
-    "@keystonejs/test-utils": "^6.1.2",
-    "@sendgrid/mail": "^6.5.5",
-    "connect-pg-simple": "^6.1.0",
-    "cross-env": "^7.0.0",
+    "@keystonejs/adapter-knex": "^11.0.6",
+    "@keystonejs/app-admin-ui": "^7.3.6",
+    "@keystonejs/app-graphql": "^6.1.3",
+    "@keystonejs/auth-password": "^5.1.14",
+    "@keystonejs/fields": "^17.1.3",
+    "@keystonejs/fields-authed-relationship": "^1.0.12",
+    "@keystonejs/fields-auto-increment": "^6.0.3",
+    "@keystonejs/fields-datetime-utc": "^7.0.0",
+    "@keystonejs/fields-markdown": "^5.2.9",
+    "@keystonejs/fields-wysiwyg-tinymce": "^5.3.10",
+    "@keystonejs/file-adapters": "^7.0.7",
+    "@keystonejs/keystone": "^16.0.0",
+    "@keystonejs/list-plugins": "^7.1.1",
+    "@keystonejs/server-side-graphql-client": "^1.1.2",
+    "@keystonejs/test-utils": "^8.0.4",
+    "@sendgrid/mail": "^7.2.6",
+    "connect-pg-simple": "^6.2.1",
+    "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-session": "^1.17.0",
-    "graphql": "^14.6.0",
-    "http-terminator": "^2.0.2",
+    "express-session": "^1.17.1",
+    "http-terminator": "^2.0.3",
     "react": "^16.13.1",
     "striptags": "^3.1.1",
-    "validator": "^13.1.1"
+    "validator": "^13.1.17"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
@@ -51,12 +51,11 @@
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jest": "^23.13.2",
-    "eslint-plugin-node": "^11.0.0",
-    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "jest": "^26.0.1",
-    "nodemon": "^2.0.2",
-    "prettier": "^1.19.1",
-    "table": "^5.4.6"
+    "nodemon": "^2.0.4",
+    "prettier": "^1.19.1"
   },
   "main": "server.js"
 }
