--- a/web/package.json
+++ b/web/package.json
@@ -13,14 +13,12 @@
   "author": "Javier Segovia",
   "license": "MIT",
   "dependencies": {
-    "@apollo/react-hooks": "^3.1.3",
+    "@apollo/react-hooks": "^4.0.0",
     "@babel/core": "^7.6.2",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/preset-env": "^7.6.2",
     "@babel/preset-react": "^7.0.0",
-    "babel-eslint": "^10.0.3",
-    "babel-plugin-module-resolver": "^3.2.0",
-    "@date-io/date-fns": "^1.3.11",
+    "@date-io/date-fns": "^2.10.6",
     "@material-ui/core": "^4.9.14",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.53",
@@ -36,52 +34,54 @@
     "apollo-link-http": "^1.5.16",
     "apollo-link-ws": "^1.0.19",
     "apollo-utilities": "^1.3.2",
+    "babel-eslint": "^10.0.3",
     "babel-plugin-inline-react-svg": "^1.1.1",
+    "babel-plugin-module-resolver": "^4.0.0",
     "babel-plugin-styled-components": "^1.10.6",
     "casual": "^1.6.2",
     "classnames": "^2.2.6",
     "date-fns": "^2.13.0",
     "dotenv": "^8.2.0",
-    "downshift": "^3.4.3",
-    "faker": "^4.1.0",
+    "downshift": "^6.0.6",
+    "faker": "^5.1.0",
     "graphql": "^15.0.0",
     "graphql-tag": "^2.10.1",
-    "intersection-observer": "^0.10.0",
+    "intersection-observer": "^0.11.0",
     "isomorphic-unfetch": "^3.0.0",
     "lodash.debounce": "^4.0.8",
     "memoize-one": "^5.1.1",
     "next": "^9.4.0",
-    "next-images": "^1.4.0",
+    "next-images": "^1.5.0",
     "next-with-apollo": "^5.0.1",
     "node-sass": "^4.14.1",
     "nprogress": "^0.2.0",
-    "polished": "^3.6.3",
+    "polished": "^3.6.7",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-adopt": "^0.6.0",
     "react-apollo": "^3.1.5",
     "react-dom": "^16.13.1",
     "react-flag-kit": "^0.3.1",
-    "react-flip-toolkit": "^7.0.9",
+    "react-flip-toolkit": "^7.0.12",
     "react-icons": "^3.10.0",
     "react-image-magnify": "^2.7.4",
     "react-input-mask": "^2.0.4",
     "react-markdown": "^4.3.1",
-    "react-slick": "^0.26.1",
+    "react-slick": "^0.27.11",
     "react-spring": "^8.0.27",
-    "react-use": "^14.2.0",
+    "react-use": "^15.3.4",
     "react-window": "^1.8.5",
     "resize-observer-polyfill": "^1.5.1",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^4.4.1",
+    "styled-components": "^5.2.0",
     "subscriptions-transport-ws": "^0.9.16",
-    "use-debounce": "^3.4.2",
+    "use-debounce": "^5.0.0",
     "uuid": "^8.0.0",
-    "validator": "^13.0.0",
-    "webpack": "^4.43.0"
+    "validator": "^13.1.17",
+    "webpack": "^4.44.2"
   },
   "devDependencies": {
-    "eslint": "^6.4.0",
+    "eslint": "^7.9.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.3.0",
     "eslint-import-resolver-babel-module": "^5.1.0",
@@ -90,8 +90,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.14.3",
-    "eslint-plugin-react-hooks": "^2.3.0",
-    "prettier": "^1.18.2",
-    "table": "^5.4.6"
+    "eslint-plugin-react-hooks": "^4.1.2",
+    "prettier": "^2.1.2"
   }
 }
