--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -8,7 +8,7 @@ x-default-opts: &default-opts
 services:
   web:
     <<: *default-opts
-    image: slatamweb:prod
+    image: javiersegovia/slatam:web_prod
     networks:
       - proxy
       - client
@@ -35,7 +35,7 @@ services:
 
   api:
     <<: *default-opts
-    image: slatamapi:prod
+    image: javiersegovia/slatam:api_prod
     networks:
       - proxy
       - server
