Create api/index and fix problems with Keystone build

--- a/api/package.json
+++ b/api/package.json
@@ -14,26 +14,25 @@
     "start": "cross-env NODE_ENV=production node server.js",
     "predev": "yarn run initialize_db",
     "prestart": "yarn run initialize_db",
-    "initialize_db": "knex seed:run && knex migrate:up",
+    "initialize_db": "knex migrate:up",
     "test": "cross-env NODE_ENV=test DISABLE_LOGGING=true jest --coverage",
     "test:watch": "cross-env NODE_ENV=test DISABLE_LOGGING=true jest --watch --maxWorkers=1 --coverage"
   },
   "dependencies": {
-    "@keystonejs/adapter-knex": "^11.0.6",
-    "@keystonejs/app-admin-ui": "^7.3.6",
+    "@keystonejs/adapter-knex": "^11.0.7",
+    "@keystonejs/app-admin-ui": "^7.3.7",
     "@keystonejs/app-graphql": "^6.1.3",
     "@keystonejs/auth-password": "^5.1.14",
-    "@keystonejs/fields": "^17.1.3",
-    "@keystonejs/fields-authed-relationship": "^1.0.12",
-    "@keystonejs/fields-auto-increment": "^6.0.3",
-    "@keystonejs/fields-datetime-utc": "^7.0.0",
-    "@keystonejs/fields-markdown": "^5.2.9",
+    "@keystonejs/fields": "^18.0.0",
+    "@keystonejs/fields-authed-relationship": "^1.0.13",
+    "@keystonejs/fields-auto-increment": "^7.0.0",
+    "@keystonejs/fields-markdown": "^5.2.10",
     "@keystonejs/fields-wysiwyg-tinymce": "^5.3.10",
-    "@keystonejs/file-adapters": "^7.0.7",
-    "@keystonejs/keystone": "^16.0.0",
-    "@keystonejs/list-plugins": "^7.1.1",
+    "@keystonejs/file-adapters": "^7.0.8",
+    "@keystonejs/keystone": "^17.0.0",
+    "@keystonejs/list-plugins": "^7.1.2",
     "@keystonejs/server-side-graphql-client": "^1.1.2",
-    "@keystonejs/test-utils": "^8.0.4",
+    "@keystonejs/test-utils": "^9.0.0",
     "@sendgrid/mail": "^7.2.6",
     "connect-pg-simple": "^6.2.1",
     "cross-env": "^7.0.2",
