--- a/api/.eslintrc.json
+++ b/api/.eslintrc.json
@@ -18,6 +18,7 @@
     "import/newline-after-import": "error",
     "import/imports-first": ["error", "absolute-first"],
     "node/no-missing-require": 0,
+    "array-callback-return": 0,
     // "import/no-unresolved": 0,
     "consistent-return": 0,
     "no-param-reassign": 0,
