--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -104,7 +104,16 @@ FROM test as audit
 
 FROM source as prod
 
-RUN /slatam/node_modules/.bin/keystone build
+ENV NODE_ENV=production
+# RUN /slatam/node_modules/.bin/keystone --entry=server.js build
+
+# RUN ls
+# RUN cat package.json
+# RUN ls node_modules
+# RUN ls /slatam/node_modules/.bin
+
+# RUN yarn build
+
 EXPOSE 4000
 
 CMD ["node", "server.js"]
